Sep  2 2000 -   Added PythonInterpPerServer directive. Fixed a bug relating
		to ap_add_version_component.

Aug 28 2000 -	Added Richard Barret's patch that gives python socket module 
		behaviour from req.connection.local_addr and remote_addr.

Aug 27 2000 -   Added PythonInitHandler. Also, it looks like dynamic handler
		addition now works correctly, after trying 15 different ways of
		implementing it, resorting to req->notes seems to be the only
		option.

Aug 18 2000 -   Added req.get_remote_host()

Aug 16 2000 -   Added Dr. Timochouk's PythonOptimize directive patch.

Aug 15 2000 -   Extensive improvements to req.read() prompted by Dr. Timochouk's
		patches.

Aug 10 2000 -	Documentation change - get_basic_auth_pw must be called before
		using connection.user.

Aug 06 2000 -   Table oject now has a new method "add" which allows creation
		of multiple keys. This is useful with things like "Set-Cookie"
		headers.

Jul 22 2000 -   Added req.add_handler (dynamic handler registration)

Jul 18 2000 -   Added PythonEnablePdb
		ChildExitHandler now properly calls Py_Finalize()
		python_handler is now cumulative rather than overriding

Jul 04 2000 -   2.4.1 Released. Mostly bug fixes. Should be pretty stable.

Jun 20 2000 -   2.4 Released.

Jun 17 2000 -   Started the tutorial.html.

Jun 11 2000 -   Stephane Bidoul's thread-safe win32 changes put in. As part
		of this, all chdir()'s are gone and now instead of '.', the
		file path is prepended to pythonpath.

Jun  8 2000 -   2.3 Released.

Jun  7 2000 -	PythonImport now works.

Jun  5 2000 - 	PythonDebug and other on/off type handlers are now of type FLAG
		so they require an argument of On or Off. 